--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ChatAppAndroid">
-        <activity android:name=".OtpActivity"></activity>
-        <activity android:name=".PhoneActivity">
+        <activity android:name=".OtpActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".PhoneActivity">
+
         </activity>
         <activity android:name=".MainActivity"></activity>
     </application>
