--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,15 @@
 plugins {
     id 'com.android.application'
 }
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
+
+    buildFeatures{
+        viewBinding true
+    }
 
     defaultConfig {
         applicationId "naveen.kumar.chatapp_android"
@@ -29,6 +34,9 @@ android {
 }
 
 dependencies {
+    implementation platform('com.google.firebase:firebase-bom:27.1.0')
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-auth'
     implementation 'com.github.mukeshsolanki:android-otpview-pinview:2.1.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
