--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,23 +7,23 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:usesCleartextTraffic="true"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ChatAppAndroid">
-        <activity android:name=".OtpActivity"
-            android:windowSoftInputMode="stateVisible">
-
-        </activity>
-        <activity android:name=".PhoneActivity"
+        android:theme="@style/Theme.ChatAppAndroid"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".UserProfilesActivity"></activity>
+        <activity
+            android:name=".OtpActivity"
+            android:windowSoftInputMode="stateVisible"></activity>
+        <activity
+            android:name=".PhoneActivity"
             android:windowSoftInputMode="stateVisible">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
